--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "key": "",
+  "key": "13407",
   "public": false,
   "maxUploadSize": 50,
   "markdown": true,
@@ -13,7 +13,7 @@
     "png", "jpg", "gif", "mp4", "mp3", "jpeg", "tiff", "bmp", "ico", "psd", "eps", "raw", "cr2", "nef", "sr2", "orf", "svg", "wav", "webm", "aac", "flac", "ogg", "wma", "m4a", "gifv"
   ],
   "admin":{
-    "key": "admin pass key goes here",
+    "key": "13407admin",
     "maxUploadSize": 1024,
     "allowed": [
     "png", "jpg", "gif", "mp4", "mp3","jpeg", "tiff", "bmp", "ico", "psd", "eps", "raw", "cr2", "nef", "sr2", "orf", "svg", "wav", "webm", "aac", "flac", "ogg", "wma", "m4a", "gifv", "html"
